<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

	<group android:checkableBehavior="single">
		<item
			android:id="@+id/show_location_item"
			android:icon="@drawable/ic_whatshot_black_24dp"
			android:title="@string/show_location_item_title"/>
		<item
			android:id="@+id/show_location_details_item"
			android:icon="@drawable/ic_whatshot_black_24dp"
			android:title="@string/show_location_details_item_title"/>
		<item
			android:id="@+id/show_multiple_locations_item"
			android:icon="@drawable/ic_whatshot_black_24dp"
			android:title="@string/show_multiple_locations_item_title"/>
		<item
			android:id="@+id/show_route_demo_item"
			android:icon="@drawable/ic_whatshot_black_24dp"
			android:title="@string/show_route_item_title"/>
		<item
			android:id="@+id/show_venue_item"
			android:icon="@drawable/ic_whatshot_black_24dp"
			android:title="@string/show_venue_item_title"/>
		<item
			android:id="@+id/show_building_item"
			android:icon="@drawable/ic_whatshot_black_24dp"
			android:title="@string/show_building_item_title"/>
		<item
			android:id="@+id/show_floor_item"
			android:icon="@drawable/ic_whatshot_black_24dp"
			android:title="@string/show_floor_item_title"/>
		<item
			android:id="@+id/change_display_setting_item"
			android:icon="@drawable/ic_whatshot_black_24dp"
			android:title="@string/change_displ_sett_item_title"/>
		<item
			android:id="@+id/custom_floor_selector_item"
			android:icon="@drawable/ic_whatshot_black_24dp"
			android:title="@string/custom_floor_selector_item_title"/>
		<item
			android:id="@+id/show_my_location_item"
			android:icon="@drawable/ic_whatshot_black_24dp"
			android:title="@string/show_my_location_item_title"/>
		<item
			android:id="@+id/multiple_dataset_item"
			android:icon="@drawable/ic_whatshot_black_24dp"
			android:title="@string/multiple_dataset_item_title"/>
		<item
			android:id="@+id/search_map_item"
			android:icon="@drawable/ic_whatshot_black_24dp"
			android:title="@string/Search_map_item_title"/>
		<item
			android:id="@+id/location_data_source_item"
			android:icon="@drawable/ic_whatshot_black_24dp"
			android:title="@string/location_data_source_item_title"/>

		<item
			android:id="@+id/clustering_item"
			android:icon="@drawable/ic_whatshot_black_24dp"
			android:title="@string/clustering_item_title"/>
	</group>
</menu>
